# rag-pipeline

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/routes/: chat.py  documents.py  health.py
app/core/: chain.py  chunking.py  embeddings.py  ingestion.py  retriever.py
app/db/: database.py  vector_store.py
app/models/: schemas.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_core/: test_chain.py  test_chunking.py  test_embeddings.py  test_ingestion.py  test_retriever.py
